--- a/static/css/players.css
+++ b/static/css/players.css
@@ -364,3 +364,7 @@
     box-shadow: 0 0 0 3px rgba(79, 70, 229, 0.2);
     color: white;
 }
+
+body {
+    overflow-x: hidden;
+}
